--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/css/style.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/main.js"></script>
+
     <title>Smart Stock Track</title>
 </head>    
 <body>
@@ -25,14 +28,14 @@
       </ul>
     </div>
   </nav>
-    
+
   <div class="container">
-    <h3>Right Aligned Navbar</h3>
-    <p>The .navbar-right class is used to right-align navigation bar buttons.</p>
+    <div id="currencyTable">
+      
+    </div>
   </div>
+  <hr>
   <footer>Copright &copy; </footer>
-
-  <script src="/js/index.js"> </script>
-
+  <script src="/js/main.js"></script>
 </body>
 </html>
