--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/css/style.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js" defer></script>
 
     <title>Smart Stock Track</title>
 </head>    
@@ -36,6 +36,6 @@
   </div>
   <hr>
   <footer>Copright &copy; </footer>
-  <script src="/js/main.js"></script>
+  
 </body>
 </html>
