--- a/html/signin.html
+++ b/html/signin.html
@@ -12,6 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/signin.css">
     <script src="/css/style.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/main.js" defer></script>
 
     <title>Smart Stock Track</title>
 </head>    
@@ -28,16 +30,16 @@
     </div>
   </nav>
 
-  <form action="action_page.php" method="post">
+  <form>
 
     <div class="container">
       <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <input id = "emailLogin" type="text" placeholder="Enter Username" name="uname" required>
   
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input id="passwordLogin" type="password" placeholder="Enter Password" name="psw" required>
   
-      <button type="submit">Login</button>
+      <button id="btnLogin" type="submit">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
@@ -51,11 +53,7 @@
   </form>
 
   <footer>Copright &copy; </footer>
-
-
-
-
-  <script src="/js/index.js"> </script>
+  <script src="../js/main.js"></script>
 
 </body>
 </html>
