--- a/html/signup.html
+++ b/html/signup.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/signin.css">
     <script src="/css/style.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/signup.js" defer></script>
+    <script src="../js/main.js" defer></script>
 
     <title>Smart Stock Track</title>
 </head>    
@@ -57,7 +57,7 @@
 
   <footer>Copright &copy; </footer>
 
- 
+  <script src="../js/main.js"></script>
 
 </body>
 </html>
