--- a/html/signin.html
+++ b/html/signin.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/signin.css">
     <script src="/css/style.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/main.js" defer></script>
+    <script src="../js/signin.js" defer></script>
 
     <title>Smart Stock Track</title>
 </head>    
@@ -53,7 +53,5 @@
   </form>
 
   <footer>Copright &copy; </footer>
-  <script src="../js/main.js"></script>
-
 </body>
 </html>
