Creating main table

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,10 @@
   </nav>
 
   <div class="container">
-    <div id="currencyTable">
+    <table id="currencyTable">
+
+    </table> 
+
       
     </div>
   </div>
