main table done

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
   </nav>
 
   <div class="container">
-    <table id="currencyTable">
+    <table id="currencyTable" class="table" >
 
     </table> 
 
