Including crypto selection on  mainpage

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,12 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" type="">
+    <select id="currencyChoice">
+      <option value="USD" selected="USD">USD</option>
+      <option value="EUR">EUR</option>
+      <option value="BTC">BTC</option>
+    </select>
     <table id="currencyTable" class="table" >
 
     </table> 
