--- a/html/signup.html
+++ b/html/signup.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/signin.css">
-    <script src="/css/style.css"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/signup.js" defer></script>
 
@@ -42,7 +42,7 @@
       <label for="psw"><b>Confirm Password</b></label>
       <input id= "userCheckpassword" type="password" placeholder="Enter Password" name="psw" required>
   
-      <button id="btnRegister" type="submit">Register</button>
+      <button id="btnRegister" type="button">Register</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
