--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="../css/style.css"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/main.js" defer></script>
 
@@ -36,9 +35,8 @@
       <option value="EUR">EUR</option>
       <option value="BTC">BTC</option>
     </select>
-    <table id="currencyTable" class="table" >
 
-    </table> 
+    <table id="currencyTable" class="table" ></table> 
 
       
     </div>
