--- a/html/home.html
+++ b/html/home.html
@@ -21,10 +21,10 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Smart Stock Tracker</a>
       </div>
-      <ul class="nav navbar-nav navbar-right">        
-        <li><a href="/html/signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="/html/signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/html/portfolio.html"><span class="glyphicon glyphicon-star-empty"></span> Portfolio</a></li>        
+        <li><a href=""><span class="glyphicon glyphicon-cog"></span> Options</a></li>
+        <li><a href=""><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </nav>
