--- a/html/signup.html
+++ b/html/signup.html
@@ -50,8 +50,8 @@
     </div>
   
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <span class="psw"><a href="/html/signup.html">Sign Up</a><hr></span>
+      <button type="button" id="cancelSignup">Cancel</button>
+      <span class="psw"><a href="/html/signin.html">Sign In</a><hr></span>
     </div>
   </form>
 
