--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Smart Stock Tracker</a>
+        <a class="navbar-brand" href="../index.html">Smart Stock Tracker</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/html/portfolio.html"><span class="glyphicon glyphicon-star-empty"></span> Portfolio</a></li>        
