--- a/html/signin.html
+++ b/html/signin.html
@@ -21,11 +21,11 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Smart Stock Tracker</a>
+        <a class="navbar-brand" href="../index.html">Smart Stock Tracker</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/html/signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="/html/signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </nav>
