This git will update the stock table and insert the summaries displays Total Invested and Total Taxes

--- a/html/signin.html
+++ b/html/signin.html
@@ -39,6 +39,8 @@
       <input id="passwordLogin" type="password" placeholder="Enter Password" name="passwordLogin" required>
   
       <button id="btnLogin" type="button">Login</button>
+      <label id="loginStatus"></label>
+      <br>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
