--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Investiments, Market, Crypto, CryptoCurrency, Currency, Stock">
-    <meta name="description" content="Smart tool tracking stock investiments">
+    <meta name="keywords" content="Investment, Stock Market, Crypto, Cryptocurrency, Stocks, Portfolio, Trading">
+    <meta name="description" content="Revolutionize your investment strategy with our smart tool for tracking stocks and cryptocurrency markets. Stay up-to-date on market trends and manage your portfolio with ease.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Smart Stock Tracker">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="English">
+    <meta name="copyright" content="Copyright Smart Stock Tracker / Diego J F Campos">
+    <meta name="rating" content="General">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/main.js" defer></script>
-
     <title>Smart Stock Track</title>
 </head>    
 <body>
   <header>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse" id="navContainer">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">Smart Stock Tracker</a>
         </div>
         <ul class="nav navbar-nav navbar-right">        
           <li><a href="/html/signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="/html/signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          
+          <li><a href="/html/signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>          
         </ul>
       </div>
     </nav>
@@ -43,7 +47,7 @@
     </div>
     <hr>
   </main>
-  <footer>Copright &copy; </footer>
+  <footer> &copy Copright; </footer>
   
 </body>
 </html>
