--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -43,9 +43,8 @@
 
       </div>
       <div class="Title" id="currentAmount">Current Amount</div>
-      <div class="Title" id="totalTaxes">
-        <p>Total Taxes</p>
-      </div>
+      <div  id="totalTaxes">
+      <div><p>Total Taxes</p></div>      
       <div class="Title" id="resultSpot">Result</div>
       <div class="Title" id="totalStacking">Total Stacking</div>
       <div class="Title" id="totalEarnedStacking">Earned Stacking</div>
