--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -42,13 +42,15 @@
         <p>Total Invested</p>
 
       </div>
-      <div class="Title" id="currentAmount">Current Amount</div>
-      <div  id="totalTaxes">
-      <div><p>Total Taxes</p></div>      
-      <div class="Title" id="resultSpot">Result</div>
-      <div class="Title" id="totalStacking">Total Stacking</div>
-      <div class="Title" id="totalEarnedStacking">Earned Stacking</div>
-      <div><button class="Title" id="btnShowModalInsert">Insert Stock</button></div>
+      <div id="currentAmount">Current Amount</div>
+      <div id="totalTaxes">
+        <p>Total Taxes</p>
+
+      </div>
+      <div id="resultSpot">Result</div>
+      <div id="totalStacking">Total Stacking</div>
+      <div id="totalEarnedStacking">Earned Stacking</div>
+      <div><button id="btnShowModalInsert">Insert Stock</button></div>
     </section>
 
     <div >
