--- a/html/signin.html
+++ b/html/signin.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Investiments, Market, Crypto, CryptoCurrency, Currency, Stock">
-    <meta name="description" content="Smart tool tracking stock investiments">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Investment, Stock Market, Crypto, Cryptocurrency, Stocks, Portfolio, Trading">
+    <meta name="description" content="Revolutionize your investment strategy with our smart tool for tracking stocks and cryptocurrency markets. Stay up-to-date on market trends and manage your portfolio with ease.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Smart Stock Tracker">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="English">
+    <meta name="copyright" content="Copyright Smart Stock Tracker / Diego J F Campos">
+    <meta name="rating" content="General">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
